[package]
name = "nimiq-collections"
version = "0.1.0"
authors = ["Pascal B <git@paberr.net>"]
edition = "2018"
description = "A set of advanced collections for use in the Nimiq Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dev-dependencies]
rand = "0.6"
