[package]
name = "nimiq-mempool"
version = "0.2.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Mempool implementation for Nimiq"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
log = "0.4"
parking_lot = "0.7"
beserial = { path = "../beserial", version = "0.2" }
nimiq-hash = { path = "../hash", version = "0.2" }
nimiq-keys = { path = "../keys", version = "0.2" }
nimiq-account = { path = "../primitives/account", version = "0.2" }
nimiq-block = { path = "../primitives/block", version = "0.2" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.2" }
nimiq-utils = { path = "../utils", version = "0.2", features = ["observer", "timers", "mutable-once"] }
nimiq-accounts = { path = "../accounts", version = "0.2" }
nimiq-blockchain = { path = "../blockchain", version = "0.2" }
nimiq-collections = { path = "../collections", version = "0.2" }
nimiq-primitives = { path = "../primitives", version = "0.2", features = ["coin", "networks"] }

[dev-dependencies]
hex = "0.3"
nimiq-database = { path = "../database", version = "0.2" }
nimiq-network-primitives = { path = "../network-primitives", version = "0.2" }
