[package]
name = "nimiq-messages"
version = "0.2.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Messages send over the nimiq network"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
bitflags = "1.0"
byteorder = "1.2"
hex = "0.3"
parking_lot = "0.7"
rand = "0.6"
beserial = { path = "../beserial", version = "0.2" }
beserial_derive = { path = "../beserial/beserial_derive", version = "0.2" }
nimiq-hash = { path = "../hash", version = "0.2" }
nimiq-keys = { path = "../keys", version = "0.2" }
nimiq-macros = { path = "../macros", version = "0.2" }
nimiq-network-primitives = { path = "../network-primitives", version = "0.2", features = ["networks", "subscription", "version"] }
nimiq-tree-primitives = { path = "../accounts/tree-primitives", version = "0.2" }
nimiq-block = { path = "../primitives/block", version = "0.2" }
nimiq-transaction = { path = "../primitives/transaction", version = "0.2" }
nimiq-utils = { path = "../utils", version = "0.2", features = ["observer", "crc", "time"] }

[dev-dependencies]
nimiq-utils = { path = "../utils", version = "0.2", features = ["observer", "crc", "time", "iterators"] }
